# estimador-precio-vehiculos

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: architecture.md  data-model.md  deployment.md  roadmap.md
infra/docker/: Dockerfile.api  Dockerfile.streamlit
scripts/: backfill_core_features.py  check_db_connection.py  extract_marketplace.py  init_db.py  process_raw_to_staging.py  process_staging_to_processed.py  promote_model.py  run_inventory_capture.py  seed_colombia_geo_reference.py  train_models.py
src/vehicle_price_estimator/api/: deps.py  main.py
src/vehicle_price_estimator/api/routers/: health.py  market.py  meta.py  prediction.py
src/vehicle_price_estimator/api/schemas/: market.py  prediction.py
src/vehicle_price_estimator/api/services/: market.py  prediction.py
src/vehicle_price_estimator/config/: logging.py  settings.py
src/vehicle_price_estimator/frontend/streamlit_app/: Home.py
src/vehicle_price_estimator/infrastructure/connectors/mercadolibre/: client.py  connector.py  models.py  parser.py
src/vehicle_price_estimator/infrastructure/db/: healthcheck.py  init_db.py  session.py
src/vehicle_price_estimator/infrastructure/db/migrations/: README
src/vehicle_price_estimator/infrastructure/db/models/: __init__.py  listing_feature.py  listing_status_history.py  location_reference.py  model_registry.py  pipeline_run.py  prediction_log.py  price_history.py  raw_listing_payload.py  raw_run.py  staging_listing.py  vehicle.py
src/vehicle_price_estimator/infrastructure/ml/features/: dataset_builder.py  feature_schema.py
src/vehicle_price_estimator/infrastructure/storage/: local_storage.py
src/vehicle_price_estimator/pipelines/extraction/: inventory_capture.py  run_extraction.py
src/vehicle_price_estimator/pipelines/processing/: backfill_core_features.py  raw_to_staging.py  seed_colombia_geo_reference.py  staging_to_core.py
src/vehicle_price_estimator/pipelines/training/: run_training.py
tests/unit/: test_api_app.py
(+4 files in other folders)
