[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-price-estimator"
version = "0.1.0"
description = "Estimador de precio observable de mercado para vehiculos usados en Colombia usando Mercado Libre."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "orjson>=3.10.0",
  "playwright>=1.52.0",
  "pydantic-settings>=2.8.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
